@@ -39,7 +39,7 @@ class Widget(MainWidget):
         global last_error
         last_error = error
         # Activate this for debugging.
-        #sys.stderr.write(error)
+        sys.stderr.write(error)
 
     def show_question(self, question, option0, option1, option2):
         #sys.stderr.write(question+'\n')
@@ -427,9 +427,6 @@ class TestSync(object):
         assert self.client.mnemosyne.database().con.execute(\
             "select count() from log").fetchone()[0] == 23
         assert self.server.is_sync_in_progress() == False
-
-        # TODO: fix race condition which requires this.
-        import time; time.sleep(3)
 
     def test_add_tag_controller(self):
 
@@ -1434,10 +1431,6 @@ class TestSync(object):
 
         assert self.client.database.con.execute("select count() from log where event_type=?",
             (EventTypes.ADDED_MEDIA_FILE, )).fetchone()[0] == 3
-
-
-        # TODO: fix race condition which requires this.
-        import time; time.sleep(3)
 
     def test_binary_download_no_old_reps(self):
 
