@@ -1,3 +1,5 @@
+-'(Re)learn sister cards on the same day' is now always set to false and that
+ option has been removed from the configuration screen.
 -fix errors when converting from a front-to-back card to a cloze card
  (reported by Henrik).
 -fix errors when deleting a cloned card type with custom formatting
